--- a/index.html
+++ b/index.html
@@ -10,16 +10,76 @@
 <body>
     <!-- Nav tags starts here -->
 <nav>
+    <h1 class="web-name">Best Travel Bd</h1>
 
+    <ul>
+        <li><a href="">Home</a></li>
+        <li><a href="">Packages</a></li>
+        <li><a href="">Testimonial</a></li>
+        <li><a href="">Blog</a></li>
+        <li><a href="">Contact</a></li>
+    </ul>
 </nav>
 <!-- Nav tags closes here -->
 
 <!-- Header tags starts here -->
 <header>
-
+    <div class="banner-container">
+        <div class="banner-img">
+            <h1 class="banner-title">Explore Your Travel</h1>
+            <p class="banner-content">Select a popular travel destination below to discover exclusive trips backed by our low price guarantee.</p>
+            <div class="select-section">
+                <button class="where-go-btn">Where go</button>
+                <button class="when-btn">When</button>
+                <button class="select-btn">Select Type</button>
+                <button class="find-btn"><i class="fa-solid fa-magnifying-glass"></i> Find Now</button>
+            </div>
+        </div>
+    </div>
 </header>
 <!-- Header tags closes here -->
+    <div class="popular-tour-container">
+        <div class="popular-tour-contents">
+            <h3 class="popular-tour-title">Our Popular Tours</h3>
+            <p class="popular-tour-text">
+                There is some best place to travel. The itineraries in this travel collection are chosen time and time again—and lets explore why.
+            </p>
+            <ul>
+                <li>Maldives: Maldives Country in South Asia. Its known for its beaches, blue lagoons and extensive reefs.</li>
 
+                <li>Kashmir: Kashmir is often referred to as "Paradise on Earth" for its breathtaking natural beauty Nestled in India. </li>
+
+                <li>Bandarban: Bandarban is popular for its breathtaking view of the Arakan range and the mountain clouds.</li>
+            </ul>
+            <p class="popular-tour-details">The tours featured throughout our website are intended to give you ideas for what's possible when you travel with us.</p>
+            <button class="read-more-btn">Read More</button>
+        </div>
+        <div class="popular-tour-img">
+            <img src="" alt="">
+        </div>
+    </div>
+    <div class="choose-container">
+        <h1 class="choose-title">Choose Your Destination</h1>
+        <p class="choose-content">
+            Here are some best traveling places to help you choose and discover how beautiful the places are. 
+        </p>
+    </div>
+
+    <div class="places-img-container">
+        <div class="line 1">
+            <img src="" alt="" class="maldives">
+            <img src="" alt="" class="indonesia">
+        </div>
+        <div class="line2">
+            <img src="" alt="" class="srilanka">
+            <img src="" alt="" class="america">
+            <img src="" alt="" class="kashmir">
+        </div>
+        <div class="line3">
+            <img src="" alt="" class="bangladesh">
+            <img src="" alt="" class="bandarban">
+        </div>
+    </div>
 <!-- Main tags starts here -->
 <main>
 
