--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,52 +9,57 @@
     <script src="https://kit.fontawesome.com/325b5f103a.js" crossorigin="anonymous"></script>
 
 </head>
+
 <body>
     <!-- Nav tags starts here -->
-<nav class="nav-bar hide">
-    <div class="web-name-container">
-        <img src="Images/Group 40071 (2).png" alt="" class="logo-img">
-        <h1 class="web-name">Best <span class="travel-text">Travels</span></h1>
-    </div>
+    <nav class="nav-bar">
+        <div class="web-name-container">
+            <img src="Images/Group 40071 (2).png" alt="" class="logo-img">
+            <h1 class="web-name">Best <span class="travel-text">Travels</span></h1>
+        </div>
 
-    <ul class="nav-manu">
-        <li><a href=""><span class="home-text">Home</span></a></li>
-        <li><a href="">Packages</a></li>
-        <li><a href="">Testimonial</a></li>
-        <li><a href="">Blog</a></li>
-        <li><a href="">Contact</a></li>
-    </ul>
-</nav>
-<!-- Nav tags closes here -->
+        <ul class="nav-manu">
+            <li><a href=""><span class="home-text">Home</span></a></li>
+            <li><a href="">Packages</a></li>
+            <li><a href="">Testimonial</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">Contact</a></li>
+        </ul>
+    </nav>
+    <!-- Nav tags closes here -->
 
-<!-- Header tags starts here -->
-<header class="hide">
-    <div class="banner-container">
-        <div class="banner-img">
-            <div class="banner-gredient">
-                <h1 class="banner-title">Explore Your Travel</h1>
-                <p class="banner-content">Welcome to "Best Travels". Select a popular travel destination below to discover exclusive trips backed by our low price guarantee. I'm sure you will love it.</p>
-                <div class="select-section">
-                    <div class="select-input">
-                        <input type="text" placeholder="Where go">
+    <!-- Header tags starts here -->
+    <header class="hide">
+        <div class="banner-container">
+            <div class="banner-img">
+                <div class="banner-gredient">
+                    <h1 class="banner-title">Explore Your Travel</h1>
+                    <p class="banner-content">Welcome to "Best Travels". Select a popular travel destination below to
+                        discover exclusive trips backed by our low price guarantee. I'm sure you will love it.</p>
+                    <div class="select-section">
+                        <div class="select-input">
+                            <input type="text" placeholder="Where go">
+                        </div>
+                        <div class="select-input">
+                            <input type="text" placeholder="When">
+                            <i class="fa-solid fa-chevron-down"></i>
+                        </div>
+                        <div class="select-input">
+                            <input type="text" placeholder="Select Type">
+                            <i class="fa-solid fa-chevron-down"></i>
+                        </div>
+                        <button class="find-btn"><i class="fa-solid fa-magnifying-glass"></i> Find Now</button>
                     </div>
-                    <div class="select-input">
-                        <input type="text" placeholder="When">
-                        <i class="fa-solid fa-chevron-down"></i>
-                    </div>
-                    <div class="select-input">
-                        <input type="text" placeholder="Select Type">
-                        <i class="fa-solid fa-chevron-down"></i>
-                    </div>
-                    <button class="find-btn"><i class="fa-solid fa-magnifying-glass"></i> Find Now</button>
                 </div>
             </div>
         </div>
-    </div>
-</header>
-<!-- Header tags closes here -->
-    <div class="popular-tour-container hide">
-        <div class="popular-tour-contents">
+    </header>
+    <!-- Header tags closes here -->
+
+    <!-- Main tags starts here -->
+    <main>
+        <!-- <div class="popular-tour-container">
+        <div class="popular-tour-contents hide">
             <h3 class="popular-tour-title primary-headings">Our Popular Tours</h3>
             <p class="popular-tour-text primary-content">
                 There is some best place to travel. The itineraries in this travel collection are chosen time and time again—and lets explore why.
@@ -68,45 +74,161 @@
             <p class="popular-tour-details primary-content">The tours featured throughout our website are intended to give you ideas for what's possible when you travel with us. So let have a great tour with us. We are waiting for you. There are more much popular tours we goes monthly. Hope you like to read. </p>
             <button class="read-more-btn primary-btn">Read More</button>
         </div>
-        <div class="popular-tour-img">
-            <div class="popular-gredient">
+        <div class="popular-tour-img hide">
+            <div class="popular-gredient hide">
                 <img src="Images/Rectangle 4.png" alt="">
             </div>
         </div>
-    </div>
-    <div class="choose-container hide">
-        <h1 class="choose-title">Choose Your Destination</h1>
-        <p class="choose-content">
-            Here are some best traveling places to help you choose and discover how beautiful the places are. 
-        </p>
-    </div>
+    </div> -->
 
-    <div class="places-img-container">
-        <div class="line 1">
-            <img src="" alt="" class="maldives">
-            <img src="" alt="" class="indonesia">
+
+
+        <div class="choose-containe hide">
+            <h1 class="choose-title primary-headings">Choose Your Destination</h1>
+            <p class="choose-content primary-content">
+                You can discover exclusive trips backed by our low price guarantee.
+            </p>
         </div>
-        <div class="line2">
-            <img src="" alt="" class="srilanka">
-            <img src="" alt="" class="america">
-            <img src="" alt="" class="kashmir">
+
+        <div class="places-img-container hide">
+            <div class="line-1">
+                <div class="maldives-img">
+                    <img src="Images/Maldives.png" alt="">
+                    <p class="maldives-text">Maldives</p>
+                </div>
+                <div class="indonesia-img">
+                    <img src="Images/Indonesia.png" alt="">
+                    <p class="indonesia-text">Indonesia</p>
+                </div>
+            </div>
+            <div class="line-2">
+                <div class="srilanka-img">
+                    <img src="Images/Srilanka.png" alt="">
+                    <p class="srilanka-text">Srilanka</p>
+                </div>
+                <div class="north-america-img">
+                    <img src="Images/America.png" alt="">
+                    <p class="america-text">North America</p>
+                </div>
+                <div class="Kashmir-img">
+                    <img src="Images/Kashmir.png" alt="">
+                    <p class="kashmir-text">Kashmir</p>
+                </div>
+            </div>
+            <div class="line-3">
+                <div class="bangladesh-img">
+                    <img src="Images/Bangladesh.png" alt="">
+                    <p class="bangladesh-text">Bangladesh</p>
+                </div>
+                <div class="bandarban-img">
+                    <img src="Images/Bandarban.png" alt="">
+                    <p class="bandarban">Bandarban</p>
+                </div>
+            </div>
         </div>
-        <div class="line3">
-            <img src="" alt="" class="bangladesh">
-            <img src="" alt="" class="bandarban">
+
+        <!-- Why choose us tags here -->
+
+        <div class="choose-container hide">
+            <h1 class="choose-title primary-headings">Why Choose Us</h1>
+            <p class="choose-content primary-content">
+                Here are some best traveling places to help you choose and discover how beautiful the places are. Hope
+                you like these places.
+            </p>
         </div>
-    </div>
-<!-- Main tags starts here -->
-<main>
 
-</main>
-<!-- Main tags closes here -->
+        <div class="boxs-container hide">
+            <div class="box-1-2">
+                <div class="box-1">
+                    <img src="Images/icons/image 1.png" alt="">
+                    <h1 class="handpicked">Handpicked Hotels</h1>
+                    <p class="handpicked-content">Best Travel gives you ultimate choices as like handpick hotel
+                        selection. Just select hotels which you like.</p>
+                </div>
+                <div class="box-2">
+                    <img src="Images/icons/image 2.png" alt="">
+                    <h1 class="handpicked">World Class Service</h1>
+                    <p class="handpicked-content">Best Travel gives you world class service. We are committed to give
+                        you our best service as world class.</p>
+                </div>
+            </div>
+            <div class="box-3">
+                <img src="Images/icons/image 3.png" alt="">
+                <h1 class="handpicked">Best Price Guarantee</h1>
+                <p class="handpicked-content">Best Travel always gives you the option to discover exclusive trips by our
+                    low price guarantee.</p>
+            </div>
+        </div>
+        <!-- Deals & Discounts tags here -->
 
-<!-- Footer tags starts here  -->
-<footer>
+        <div class="deal-container hide">
+            <h1 class="primary-headings">Deals & Discounts</h1>
+            <p class="primary-content">Best Travels offers you best deals & discount packages.</p>
+        </div>
 
-</footer>
-<!-- Footer tags closes here -->
-    
+        <div class="deals-img-container">
+            <div class="deals-1">
+                <div class="deals-1-box">
+                    <div class="deals-details">
+                        <img src="Images/icons/Frame 1.png" alt="">
+                        <p> 7 Days/ 6 Night</p>
+                        <img src="Images/icons/Frame 2.png" alt="">
+                        <p>Max : 10</p>
+                        <img src="Images/icons/Frame 3.png" alt="">
+                        <p>Maldives</p>
+                    </div>
+                    <h1 class="deals-title">Tour To Maldives</h1>
+                    <p class="deals-content">Maldives Country in South Asia. Its known for its beaches, blue lagoons and extensive reefs.</p>
+                    <h3 class="price-text">Price: $1300-$1500</h3>
+                    <button class="book-now-btn primary-btn">Book Now</button>
+                </div>
+            </div>
+            <div class="deals-2">
+                <div class="deals-2-box">
+                    <div class="deals-details">
+                        <img src="Images/icons/Frame 1.png" alt="">
+                        <p> 4 Days/ 5 Night</p>
+                        <img src="Images/icons/Frame 2.png" alt="">
+                        <p>Max : 15</p>
+                        <img src="Images/icons/Frame 3.png" alt="">
+                        <p>Kashmir</p>
+                    </div>
+                    <h1 class="deals-title">Tour To Kashmir</h1>
+                    <p class="deals-content">Kashmir is often referred to as "Paradise on Earth" for its breathtaking natural beauty Nestled in India.</p>
+                    <h3 class="price-text">Price: $1000-$1200</h3>
+                    <button class="book-now-btn primary-btn">Book Now</button>
+                </div>
+            </div>
+            <div class="deals-1">
+                <div class="deals-1-box">
+                    <div class="deals-details">
+                        <img src="Images/icons/Frame 1.png" alt="">
+                        <p> 6 Days/ 7 Night</p>
+                        <img src="Images/icons/Frame 2.png" alt="">
+                        <p>Max : 10</p>
+                        <img src="Images/icons/Frame 3.png" alt="">
+                        <p>Bandarban</p>
+                    </div>
+                    <h1 class="deals-title">Tour To Bandarban</h1>
+                    <p class="deals-content">Bandarban is popular for its breathtaking view of the Arakan range and the mountain clouds.</p>
+                    <h3 class="price-text">Price: $1500-$1600</h3>
+                    <button class="book-now-btn primary-btn">Book Now</button>
+                </div>
+            </div>
+        </div>
+
+
+
+
+    </main>
+    <!-- Main tags closes here -->
+
+    <!-- Footer tags starts here  -->
+    <footer>
+
+    </footer>
+    <!-- Footer tags closes here -->
+
 </body>
+
 </html>
