perfect place complete

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <p class="primary-content">Best Travels offers you best deals & discount packages.</p>
         </div>
 
-        <div class="deals-img-container">
+        <div class="deals-img-container hide">
             <div class="deals-1">
                 <div class="deals-1-box">
                     <div class="deals-details">
@@ -215,8 +215,29 @@
                     <button class="book-now-btn primary-btn">Book Now</button>
                 </div>
             </div>
+            <div class="see-all">
+                <button class="primary-btn see-all-btn">See All Packages</button>
+            </div>
         </div>
 
+        <!-- Perfect Placce tags here -->
+
+        <div class="perfect-place-container">
+            <div class="perfect-place-contents">
+                <h1 class="primary-headings">A Simple Perfect Place To Get Lost</h1>
+                <p class="perfect-place-content primary-content">Bangladesh is the perfect place to getting lost. You will enjoy every single beauty of nature  here. </p>
+                <ul class="content-ul">
+                    <li>You can feel the mountains of Bangladesh like they talking to you. Just you and mountains.</li>
+                    <li class="content-li-2">In Bangladesh you can find the largest natural sea beach in the world. Its Cox's Bazar.</li>
+                </ul>
+                <button class="see-more primary-btn">See More</button>
+            </div>
+            <div class="perfect-place-img">
+                <img src="Images/Perfect Place.png" alt="">
+                <p class="perfect-place-img-text">Watch Our Mountain in Bangladesh</p>           
+            </div>
+            
+        </div>
 
 
 
