--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- Nav tags closes here -->
 
     <!-- Header tags starts here -->
-    <header class="hide">
+    <header>
         <div class="banner-container">
             <div class="banner-img">
                 <div class="banner-gredient">
@@ -58,8 +58,8 @@
 
     <!-- Main tags starts here -->
     <main>
-        <!-- <div class="popular-tour-container">
-        <div class="popular-tour-contents hide">
+        <div class="popular-tour-container">
+            <div class="popular-tour-contents">
             <h3 class="popular-tour-title primary-headings">Our Popular Tours</h3>
             <p class="popular-tour-text primary-content">
                 There is some best place to travel. The itineraries in this travel collection are chosen time and time again—and lets explore why.
@@ -73,24 +73,24 @@
             </ul>
             <p class="popular-tour-details primary-content">The tours featured throughout our website are intended to give you ideas for what's possible when you travel with us. So let have a great tour with us. We are waiting for you. There are more much popular tours we goes monthly. Hope you like to read. </p>
             <button class="read-more-btn primary-btn">Read More</button>
-        </div>
-        <div class="popular-tour-img hide">
-            <div class="popular-gredient hide">
+            </div>
+            <div class="popular-tour-img">
+            <div class="popular-gredient">
                 <img src="Images/Rectangle 4.png" alt="">
             </div>
+            </div>
         </div>
-    </div> -->
 
 
 
-        <div class="choose-containe hide">
+        <div class="choose-containe">
             <h1 class="choose-title primary-headings">Choose Your Destination</h1>
             <p class="choose-content primary-content">
                 You can discover exclusive trips backed by our low price guarantee.
             </p>
         </div>
 
-        <div class="places-img-container hide">
+        <div class="places-img-container">
             <div class="line-1">
                 <div class="maldives-img">
                     <img src="Images/Maldives.png" alt="">
@@ -129,7 +129,7 @@
 
         <!-- Why choose us tags here -->
 
-        <div class="choose-container hide">
+        <div class="choose-container">
             <h1 class="choose-title primary-headings">Why Choose Us</h1>
             <p class="choose-content primary-content">
                 Here are some best traveling places to help you choose and discover how beautiful the places are. Hope
@@ -137,7 +137,7 @@
             </p>
         </div>
 
-        <div class="boxs-container hide">
+        <div class="boxs-container">
             <div class="box-1-2">
                 <div class="box-1">
                     <img src="Images/icons/image 1.png" alt="">
@@ -161,12 +161,12 @@
         </div>
         <!-- Deals & Discounts tags here -->
 
-        <div class="deal-container hide">
+        <div class="deal-container">
             <h1 class="primary-headings">Deals & Discounts</h1>
             <p class="primary-content">Best Travels offers you best deals & discount packages.</p>
         </div>
 
-        <div class="deals-img-container hide">
+        <div class="deals-img-container">
             <div class="deals-1">
                 <div class="deals-1-box">
                     <div class="deals-details">
@@ -239,13 +239,57 @@
             
         </div>
 
-
+        <!-- Newsletter tags here -->
+        <div class="newsletter-container">
+            <div class="newsletter-contents">
+                <h2 class="newsletter-title-text">Newsletter</h2>
+                <p class="newsletter-content-text">
+                    Get your daily dose of travel news & tips. Sign up today!
+                </p>
+                <hr>
+                <div class="newsletter-input-container">
+                    <div class="newsletter-input">
+                        <input type="text" placeholder="Enter your name">
+                    </div>
+                    <div class="newsletter-input">
+                        <input type="email" placeholder="Enter your email">
+                    </div>
+                </div>
+                <button class="subscribe-btn">Subscribe</button>
+            </div>
+            <div class="newsletter-img-container">
+                <img src="Images/Rectangle 8 (1).png" alt="">
+                <div class="newsletter-img-text-container">
+                    <p class="newsletter-img-text">
+                        Best Travels</p>
+                    <h2 class="save-upto-text">Save up to 70%</h2>
+                </div>
+            </div>
+        </div>
 
     </main>
     <!-- Main tags closes here -->
 
     <!-- Footer tags starts here  -->
     <footer>
+        <div class="footer-web-name-container">
+            <img src="Images/Group 40071 (2).png" alt="" class="logo-img">
+            <h1 class="web-name">Best <span class="travel-text">Travels</span></h1>
+        </div>
+        <div class="footer-contents">
+            <p class="primary-content footer-content">Best Travels offers you best deals & discount packages.You can discover exclusive trips backed by our low price guarantee.</p>
+        </div>
+
+        <div class="social-media">
+            <a href=""><i class="fa-brands fa-twitter"></i></a>
+            <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+            <a href=""><i class="fa-brands fa-instagram"></i></a>
+            <a href=""><i class="fa-brands fa-github"></i></a>
+        </div>
+
+        <hr class="footer-hr">
+
+        <p class="copy-right">2017, All Rights Reserved.</p>
 
     </footer>
     <!-- Footer tags closes here -->
