--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment 2 Execise</title>
+    <title>Assignment 2</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
     <script src="https://kit.fontawesome.com/325b5f103a.js" crossorigin="anonymous"></script>
 
 </head>
@@ -83,7 +84,7 @@
 
 
 
-        <div class="choose-containe">
+        <div class="choose-container">
             <h1 class="choose-title primary-headings">Choose Your Destination</h1>
             <p class="choose-content primary-content">
                 You can discover exclusive trips backed by our low price guarantee.
@@ -276,9 +277,7 @@
             <img src="Images/Group 40071 (2).png" alt="" class="logo-img">
             <h1 class="web-name">Best <span class="travel-text">Travels</span></h1>
         </div>
-        <div class="footer-contents">
-            <p class="primary-content footer-content">Best Travels offers you best deals & discount packages.You can discover exclusive trips backed by our low price guarantee.</p>
-        </div>
+        <p class="footer-text primary-content">Best Travels offers you best deals & discount packages.You can discover exclusive trips backed by our low price guarantee.</p>
 
         <div class="social-media">
             <a href=""><i class="fa-brands fa-twitter"></i></a>
