Bonus section complete

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             <h1 class="web-name">Best <span class="travel-text">Travels</span></h1>
         </div>
 
+        <input type="checkbox" id="menu-toggle" class="checkbox">
+        <label for="menu-toggle" class="menu-icon"><i class="fa-solid fa-bars"></i></label>
+
         <ul class="nav-manu">
             <li><a href=""><span class="home-text">Home</span></a></li>
             <li><a href="">Packages</a></li>
@@ -61,24 +64,30 @@
     <main>
         <div class="popular-tour-container">
             <div class="popular-tour-contents">
-            <h3 class="popular-tour-title primary-headings">Our Popular Tours</h3>
-            <p class="popular-tour-text primary-content">
-                There is some best place to travel. The itineraries in this travel collection are chosen time and time again—and lets explore why.
-            </p>
-            <ul class="primary-content">
-                <li>Maldives: Maldives Country in South Asia. Its known for its beaches, blue lagoons and extensive reefs.</li>
+                <h3 class="popular-tour-title primary-headings">Our Popular Tours</h3>
+                <p class="popular-tour-text primary-content">
+                    There is some best place to travel. The itineraries in this travel collection are chosen time and
+                    time again—and lets explore why.
+                </p>
+                <ul class="primary-content">
+                    <li>Maldives: Maldives Country in South Asia. Its known for its beaches, blue lagoons and extensive
+                        reefs.</li>
 
-                <li class="kashmir-tour">Kashmir: Kashmir is often referred to as "Paradise on Earth" for its breathtaking natural beauty Nestled in India. </li>
+                    <li class="kashmir-tour">Kashmir: Kashmir is often referred to as "Paradise on Earth" for its
+                        breathtaking natural beauty Nestled in India. </li>
 
-                <li>Bandarban: Bandarban is popular for its breathtaking view of the Arakan range and the mountain clouds.</li>
-            </ul>
-            <p class="popular-tour-details primary-content">The tours featured throughout our website are intended to give you ideas for what's possible when you travel with us. So let have a great tour with us. We are waiting for you. There are more much popular tours we goes monthly. Hope you like to read. </p>
-            <button class="read-more-btn primary-btn">Read More</button>
+                    <li>Bandarban: Bandarban is popular for its breathtaking view of the Arakan range and the mountain
+                        clouds.</li>
+                </ul>
+                <p class="popular-tour-details primary-content">The tours featured throughout our website are intended
+                    to give you ideas for what's possible when you travel with us. So let have a great tour with us. We
+                    are waiting for you. There are more much popular tours we goes monthly. Hope you like to read. </p>
+                <button class="read-more-btn primary-btn">Read More</button>
             </div>
             <div class="popular-tour-img">
-            <div class="popular-gredient">
-                <img src="Images/Rectangle 4.png" alt="">
-            </div>
+                <div class="popular-gredient">
+                    <img src="Images/Rectangle 4.png" alt="">
+                </div>
             </div>
         </div>
 
@@ -179,7 +188,8 @@
                         <p>Maldives</p>
                     </div>
                     <h1 class="deals-title">Tour To Maldives</h1>
-                    <p class="deals-content">Maldives Country in South Asia. Its known for its beaches, blue lagoons and extensive reefs.</p>
+                    <p class="deals-content">Maldives Country in South Asia. Its known for its beaches, blue lagoons and
+                        extensive reefs.</p>
                     <h3 class="price-text">Price: $1300-$1500</h3>
                     <button class="book-now-btn primary-btn">Book Now</button>
                 </div>
@@ -195,7 +205,8 @@
                         <p>Kashmir</p>
                     </div>
                     <h1 class="deals-title">Tour To Kashmir</h1>
-                    <p class="deals-content">Kashmir is often referred to as "Paradise on Earth" for its breathtaking natural beauty Nestled in India.</p>
+                    <p class="deals-content">Kashmir is often referred to as "Paradise on Earth" for its breathtaking
+                        natural beauty Nestled in India.</p>
                     <h3 class="price-text">Price: $1000-$1200</h3>
                     <button class="book-now-btn primary-btn">Book Now</button>
                 </div>
@@ -211,7 +222,8 @@
                         <p>Bandarban</p>
                     </div>
                     <h1 class="deals-title">Tour To Bandarban</h1>
-                    <p class="deals-content">Bandarban is popular for its breathtaking view of the Arakan range and the mountain clouds.</p>
+                    <p class="deals-content">Bandarban is popular for its breathtaking view of the Arakan range and the
+                        mountain clouds.</p>
                     <h3 class="price-text">Price: $1500-$1600</h3>
                     <button class="book-now-btn primary-btn">Book Now</button>
                 </div>
@@ -226,18 +238,20 @@
         <div class="perfect-place-container">
             <div class="perfect-place-contents">
                 <h1 class="primary-headings">A Simple Perfect Place To Get Lost</h1>
-                <p class="perfect-place-content primary-content">Bangladesh is the perfect place to getting lost. You will enjoy every single beauty of nature  here. </p>
+                <p class="perfect-place-content primary-content">Bangladesh is the perfect place to getting lost. You
+                    will enjoy every single beauty of nature here. </p>
                 <ul class="content-ul">
                     <li>You can feel the mountains of Bangladesh like they talking to you. Just you and mountains.</li>
-                    <li class="content-li-2">In Bangladesh you can find the largest natural sea beach in the world. Its Cox's Bazar.</li>
+                    <li class="content-li-2">In Bangladesh you can find the largest natural sea beach in the world. Its
+                        Cox's Bazar.</li>
                 </ul>
                 <button class="see-more primary-btn">See More</button>
             </div>
             <div class="perfect-place-img">
                 <img src="Images/Perfect Place.png" alt="">
-                <p class="perfect-place-img-text">Watch Our Mountain in Bangladesh</p>           
+                <p class="perfect-place-img-text">Watch Our Mountain in Bangladesh</p>
             </div>
-            
+
         </div>
 
         <!-- Newsletter tags here -->
@@ -268,6 +282,29 @@
             </div>
         </div>
 
+        <!-- Special Tours (Bonus) tags here -->
+        <div class="special-tour-container">
+            <div class="special-tour-contents">
+                <h1 class="special-title">Our Special Tour Catagories</h1>
+                <p class="special-text">Best Travels always thinks to do the best and provides best options as Special
+                    Tour Catagories. Which one you will prefer?</p>
+            </div>
+            <div class="special-img-container">
+                <div class="special-img1">
+                    <img src="Images/bonus/1 Day tour.jpg" alt="">
+                    <h3 class="special-tour-name">Day Trips</h3>
+                </div>
+                <div class="special-img2">
+                    <img src="Images/bonus/2 Single tour.jpg" alt="">
+                    <h3 class="special-tour-name">Single Tours</h3>
+                </div>
+                <div class="special-img1">
+                    <img src="Images/bonus/3 Kids tour.jpg" alt="">
+                    <h3 class="special-tour-name">Tours for Kids</h3>
+                </div>
+            </div>
+        </div>
+
     </main>
     <!-- Main tags closes here -->
 
@@ -277,7 +314,8 @@
             <img src="Images/Group 40071 (2).png" alt="" class="logo-img">
             <h1 class="web-name">Best <span class="travel-text">Travels</span></h1>
         </div>
-        <p class="footer-text primary-content">Best Travels offers you best deals & discount packages.You can discover exclusive trips backed by our low price guarantee.</p>
+        <p class="footer-text primary-content">Best Travels offers you best deals & discount packages.You can discover
+            exclusive trips backed by our low price guarantee.</p>
 
         <div class="social-media">
             <a href=""><i class="fa-brands fa-twitter"></i></a>
